--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'https://fonts.googleapis.com/css2?family=PT+Sans&family=Roboto:wght@100&display=swap'
+*
+  font-family: 'PT Sans', sans-serif !important
+
+ul
+  list-style: none
+.button-pro
+  margin-left: 69px
+  width: 100px
+  border-radius: 7px
+  background: azure
+  border: #fff
+  margin-bottom: 11px
+.hidden-pro
+  display: grid
+  flex-direction: column
