--- a/src/app/components/countries/countries.component.sass
+++ b/src/app/components/countries/countries.component.sass
@@ -4,7 +4,7 @@
   justify-content: space-between
 .div-2-country
   width: 90%
-  margin-top: 7px
+  margin-top: 0.438em
   text-align: center
   display: grid
   flex-direction: column
@@ -13,12 +13,12 @@ li
   text-align: initial
 
 .img-countrie
-  width: 25px
-  height: 25px
-  border-radius: 13px
+  width: 1.563em
+  height: 1.563em
+  border-radius: 0.813em
 .a-countrie
-  margin-left: 10px
-  font-size: 15px
+  margin-inline: 0.625em
+  font-size: 0.938em
   text-decoration: none
   &:hover
     cursor: pointer
