--- a/src/app/components/fixtures/fixtures.component.sass
+++ b/src/app/components/fixtures/fixtures.component.sass
@@ -1,8 +1,6 @@
 .lay-pri
   width: 100%
   display: grid
-  background: aquamarine
-
 .lay-sup
   display: grid
   margin-left: 5%
@@ -12,60 +10,64 @@
   display: flex
   flex-direction: row
   align-items: center
-  gap: 10px 30px
-  width: 100%
+  gap: 0.625em 1.875em
+  width: 95%
+  height: 9.375em
   background: aliceblue
-  margin-bottom: 5px
-  padding: 13px
+  margin-bottom: 0.313em
+  padding-inline: 0.625em 0.625em
 .div-fix
   display: grid
   flex-direction: column
   width: 40%
   text-align: center
-  margin-bottom: 15px
+  margin-bottom: 0.938em
+  font-size: 0.875em
 .img-fix
-  width: 75px
-  height: 75px
+  width: 3.125em
+  height: 3.125em
   background: cadetblue
-  margin-left: 233px
-  border-radius: 10px
+  margin-inline: 11.688em
+  border-radius: 0.625em
 .img-fix-2
-  width: 15px
-  height: 15px
-  border-radius: 10px
-  margin-left: 5px
+  width: 0.938em
+  height: 0.938em
+  border-radius: 0.625em
+  margin-left: 0.313em
 .div-result
   width: 15%
   text-align: center
   display: grid
   flex-direction: column
   align-items: center
+  font-size: 0.875em
 .span-time
-  margin-left: 5px
+  margin-inline: 0.313em
 .span-co
-  font-size: 12px
-  margin-left: 5px
+  font-size: 0.75em
+  margin-inline: 0.313em
 .div-lea
   background: aliceblue
-  margin-top: 15px
+  margin-top: 0.938em
   display: flex
   flex-direction: row
   align-items: center
-  height: 32px
+  height: 2em
+  width: 95%
 
 .divsup-flex :hover
   cursor: pointer
 .div-option
   display: flex
   flex-direction: row
-  gap: 20px 20px
+  gap: 1.25em 1.25em
 .a-option
-  margin-left: 3px
+  margin-inline: 0.188em
   width: auto
   text-decoration: none
   height: 100%
-  padding: 8px
-  border-radius: 12px
+  padding-inline: 0.5em
+  border-radius: 0.75em
   color: #99A3A4
   &:hover
     cursor: pointer
@@ -73,10 +75,10 @@
 .a-option-2
   background: #E72C0E
   color: #fff
-  border-radius: 6px
+  border-radius: 0.375em
   width: auto
   height: 100%
-  padding: 7px
+  padding-inline: 0.438em
   text-decoration: none
   text-align: center
   &:hover
@@ -84,43 +86,39 @@
     background: #F7583F
 .first-time
   background: #EAECEE
-  border-radius: 10px
+  border-radius: 0.625em
   width: 90%
-  height: 30px
-  padding: 15px
-  margin-top: 10px
-  margin-left: 71px
+  height: 1.875em
+  padding-inline: 0.938em
+  margin-top: 0.625em
+  margin-inline: 4.438em
   display: flex
   justify-content: space-between
   align-items: center
-  font-size: 12px
+  font-size: 0.75em
 .div-scorer
   display: flex
   justify-content: space-between
-  padding: 10px
+  padding-inline: 0.625em
 .a-more
   background: #F2F3F4
-  border-radius: 2px
+  border-radius: 0.125em
   text-decoration: none
 .goal-score
   background: #F8F9F9
   width: 100%
-  padding: 2px
+  padding-inline: 0.125em
   height: 100%
-  letter-spacing: 0.3px
+  letter-spacing: 0.019em
   border:1px #ABB2B9 solid
-  border-radius: 3px
-  margin-left: 2px
-  margin-right: 2px
-  font-size: 10px
+  border-radius: 0.188em
+  margin-inline: 0.125em
+  font-size: 0.625em
 .time-score
-  margin-left: 2px
-  margin-right: 2px
-  font-size: 12px
+  margin-inline: 0.125em
+  font-size: 0.75em
 .scorer-score
-  margin-left: 2px
-  margin-right: 2px
-  font-size: 12px
-
+  margin-inline: 0.125em
+  font-size: 0.75em
 
 
