--- a/src/app/components/pronosticos/pronosticos.component.sass
+++ b/src/app/components/pronosticos/pronosticos.component.sass
@@ -1,27 +1,30 @@
 .div-leagues
   background: #EAEDED
-  height: 500px
-  margin-top: 10px
-  width: 20%
+  height: 31.25em
+  margin-top: 0.625em
+  width: 15%
   display: flex
   justify-content: space-between
 
 .div-2-leagues
   width: 90%
-  margin-top: 7px
+  margin-top: 0.438em
 
 h4
   text-align: center
-  font-size: 23px
-  letter-spacing: 0.54px
+  font-size: 0.438em
+  letter-spacing: 0.034em
 
 .img-league
-  width: 25px
-  height: 25px
+  width: 1.563em
+  height: 1.563em
 .a-league
-  margin-left: 10px
-  font-size: 15px
+  margin-left: 0.625em
+  font-size: 0.938em
   text-decoration: none
   &:hover
     cursor: pointer
+.div-prin
+  width: 100%
+  display: flex
 
