--- a/src/styles.sass
+++ b/src/styles.sass
@@ -7,11 +7,15 @@ ul
   list-style: none
 .button-pro
   margin-left: 69px
-  width: 100px
-  border-radius: 7px
+  width: 6.25em
+  border-radius: 0.438em
   background: azure
   border: #fff
-  margin-bottom: 11px
+  margin-bottom: 0.688em
 .hidden-pro
   display: grid
   flex-direction: column
+app-fixtures
+  width: 70%
+  margin-top: 0.625em
+  margin-inline: 0.625em  0.625em
