--- a/src/app/components/fixtures/fixtures.component.html
+++ b/src/app/components/fixtures/fixtures.component.html
@@ -15,7 +15,7 @@
           </div>
           <span>{{fixture.event_ft_result}}</span>
           <span>{{fixture.event_status}}</span>
-          <a class="a-more" (click)="showDetailFixture(fixture.event_key)" (click)="HiddenDetail()">{{moreDetail}}</a>
+          <button type="button" class="a-more" (click)="showDetailFixture(fixture.event_key)" (click)="HiddenDetail()">{{moreDetail}}</button>
         </div>
         <div class="div-fix">
           <img class="img-fix" src="{{fixture.away_team_logo}}"><span>{{fixture.event_away_team}}</span>
@@ -41,13 +41,13 @@
         </div>
       </div>
       <div *ngFor="let fixture of eventchosen">
-        <div class="div-scorer" *ngFor="let goalscore of fixture.goalscorers">
-          <div>
+        <div class="div-scorer" *ngFor="let goalscore of fixture.goalscorers;index as i;">
+          <div *ngIf="goalscore.info_time == '1st Half'">
             <span class="time-score">{{goalscore.time}}'</span><span class="goal-score">{{goalscore.score}}</span><span
               class="scorer-score">{{goalscore.home_scorer}}</span>
           </div>
-          <div>
-            <span class="scorer-score">{{goalscore.away_scorer}}</span><span
+          <div *ngIf="goalscore.info_time == '1st Half'">
+            <span class="scorer-score">{{i}}{{goalscore.away_scorer}}</span><span
               class="goal-score">{{goalscore.score}}</span><span class="time-score">{{goalscore.time}}'</span>
           </div>
         </div>
@@ -60,11 +60,11 @@
       </div>
       <div *ngFor="let fixture of eventchosen">
         <div class="div-scorer" *ngFor="let goalscore of fixture.goalscorers">
-          <div>
+          <div *ngIf="goalscore.info_time == '2nd Half'">
             <span class="time-score">{{goalscore.time}}'</span><span class="goal-score">{{goalscore.score}}</span><span
               class="scorer-score">{{goalscore.home_scorer}}</span>
           </div>
-          <div *ngIf="">
+          <div *ngIf="goalscore.info_time == '2nd Half'">
             <span class="scorer-score">{{goalscore.away_scorer}}</span><span
               class="goal-score">{{goalscore.score}}</span><span class="time-score">{{goalscore.time}}'</span>
           </div>
