--- a/src/app/components/home/home.component.sass
+++ b/src/app/components/home/home.component.sass
@@ -2,42 +2,42 @@
   display: flex
   justify-content: space-around
   background: white
-  margin-top: 10px
-  margin-bottom: 10px
+  margin-top: 0.625em
+  margin-bottom: 0.625em
 
 .div-text
   width: 70%
-  padding: 10px
+  padding-inline: 0.625em
 .div-img
   width: 25%
-  padding: 8px
+  padding-inline: 0.5em
 .img-div-img
   width: 100%
   height: 100%
-  border-radius: 15px
+  border-radius: 0.938em
 
 h3
-  font-size: 24px
+  font-size: 1.5em
   text-align: center
-  letter-spacing: 0.53px
+  letter-spacing: 0.033em
   font-weight: 600
 p
-  font-size: 16px
-  letter-spacing: 0.63px
+  font-size: 1em
+  letter-spacing: 0.039em
 
 .calculo-juego
-  margin-top: 12px
+  margin-top: 0.75em
 .div-calculo
-  padding: 12px
+  padding-inline: 0.75em
   display: grid
   flex-direction: column
 form
   width: 50%
 
 .btn-rig
-  margin-right: 7px
+  margin-right: 0.438em
 .p-det
-  margin-top: 10px
+  margin-top: 0.625em
 
 @media screen and (min-width: 390px) and (max-width: 844px)
   .principal-home
@@ -45,12 +45,12 @@ form
     flex-direction: column
   .div-text
     width: 100%
-    padding: 30px
+    padding-inline: 1.875em
   .div-img
     width: 100%
-    padding: 23px
+    padding-inline: 1.438em
   .calculo-juego
     width: 100%
-    padding: 18px
+    padding: 1.125em
   form
     width: 70%
