--- a/src/app/components/probabilities/probabilities.component.sass
+++ b/src/app/components/probabilities/probabilities.component.sass
@@ -1,65 +1,65 @@
 .div-pri
   width: 70%
   position: inherit
-  padding: 10px
+  padding-inline: 0.625em
   background: green
   display: flex
 .div-sec
   width: 48%
   text-align: center
-  font-size: 24px
+  font-size: 1.5em
   letter-spacing: 0.33px
 .div-sec-2
   display: grid
   flex-direction: column
   width: 50%
   text-align: center
-  font-size: 24px
+  font-size: 1.5em
   letter-spacing: 0.33px
   text-align: left
-  margin-left: 12px
+  margin-inline: 0.75em
 .div-ter
   display: flex
   background: #FDEBD0
   justify-content: center
   width: 100%
-  height: 54px
-  padding: 10px
-  border-radius: 5px
+  height: 3.375em
+  padding-inline: 0.625em
+  border-radius: 0.313em
 .div-cua
   width: 48%
 .span-cn
   font-weight: 600
-  margin-right: 9px
+  margin-right: 0.563em
 .span-ln
   font-weight: 600
-  font-size: 20px
-  margin-top: 3px
+  font-size: 1.25em
+  margin-top: 0.188em
 .span-date
-  font-size: 16px
+  font-size: 1em
   left: 0
   position: absolute
-  padding: 10px
+  padding: 0.625
 .span-hour
-  margin-top: 24px
-  font-size: 16px
+  margin-top: 1.5em
+  font-size: 1em
   left: 0
   position: absolute
-  padding: 10px
+  padding: 0.625em
 .div-teams
   display: grid
   flex-direction: column
-  margin-left: 132px
-  margin-top: 5px
+  margin-inline: 8.25em
+  margin-top: 0.313em
   background: aliceblue
-  padding: 2px
-  font-size: 16px
+  padding-inline: 0.125em
+  font-size: 1em
   letter-spacing: 0.67px
 .label-es
-  font-size: 12px
+  font-size: 0.75em
   font-weight: 600
 .span-es
-  font-size: 12px
+  font-size: 0.75em
 .div-res
   display: grid
   flex-direction: column
