--- a/src/app/components/lineups/lineups.component.sass
+++ b/src/app/components/lineups/lineups.component.sass
@@ -10,3 +10,9 @@
   width: 100%
 .div-lineup-1
   width: 45%
+
+@media screen and (min-width: 45em) and (max-width: 80em)
+.lineup-sec
+  width: 70%
+  margin-top: 4px
+
