--- a/src/app/components/fixtures/fixtures.component.sass
+++ b/src/app/components/fixtures/fixtures.component.sass
@@ -1,17 +1,17 @@
 .lay-pri
-  width: 100%
+  width: 80%
   display: grid
 .lay-sup
   display: grid
   margin-left: 5%
-  width: 75%
+  width: 80%
   background: #FEF9E7
 .div-fix-flex
   display: flex
   flex-direction: row
   align-items: center
   gap: 0.625em 1.875em
-  width: 95%
+  width: 91%
   height: 9.375em
   background: aliceblue
   margin-bottom: 0.313em
@@ -53,7 +53,7 @@
   flex-direction: row
   align-items: center
   height: 2em
-  width: 95%
+  width: 91%
 
 .divsup-flex :hover
   cursor: pointer
@@ -105,6 +105,7 @@
   background: #F2F3F4
   border-radius: 0.125em
   text-decoration: none
+  width: 8.25em
 .goal-score
   background: #F8F9F9
   width: 100%
@@ -124,16 +125,52 @@
 hr
   margin-bottom: 0.625em
   margin-top: 0.625em
+  width: 91%
 .div-score
   margin-inline: 2.875em
 
+.strong
+  font-weight: 600
 
   /* Medium only */
 @media screen and (min-width: 45em) and (max-width: 80em)
   .lay-sup
-    width: 100%
+    width: 80%
   .div-lea
-    width: 100%
+    width: 80%
   .div-fix-flex
+    width: 80%
+    height: 6.875em
+  .div-fix
+    font-size: 0.75em
+    width: 37%
+    margin-bottom: 0
+  .img-fix
+    width: 1.563em
+    height: 1.563em
+  .img-fix-2
+    width: 0.625em
+    height: 0.625em
+  .span-date
+    font-size: 0.75em
+  .span-time
+    font-size: 0.75em
+  .span-result
+    font-size: 0.75em
+  .span-status
+    font-size: 0.75em
+  .a-more
+    width: 8.938em
+    font-size: 0.75em
+  .span-co
+    font-size: 0.5em
+  .div-lea
+    height: 1em
+  hr
+    width: 80%
+  .first-time
+    width: 70%
+  .div-score
     width: 100%
+    margin-inline: 3.875em
 
